@@ -178,6 +178,7 @@ void resid_state_read(sound_t *psid, sid_snapshot_state_t *sid_state)
         sid_state->rate_counter[i] = (WORD)state.rate_counter[i];
         sid_state->exponential_counter[i] = (WORD)state.exponential_counter[i];
         sid_state->envelope_counter[i] = (BYTE)state.envelope_counter[i];
+        sid_state->envelope_state[i] = (BYTE)state.envelope_state[i];
         sid_state->hold_zero[i] = (BYTE)state.hold_zero[i];
     }
 }
@@ -199,6 +200,7 @@ void resid_state_write(sound_t *psid, sid_snapshot_state_t *sid_state)
         state.rate_counter[i] = (reg16)sid_state->rate_counter[i];
         state.exponential_counter[i] = (reg16)sid_state->exponential_counter[i];
         state.envelope_counter[i] = (reg8)sid_state->envelope_counter[i];
+        state.envelope_state[i] = (EnvelopeGenerator::State)sid_state->envelope_state[i];
         state.hold_zero[i] = (sid_state->hold_zero[i] != 0);
     }
 
